# AttemptPersuadeEval

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  Untitled.ipynb  harmful_persuasion_dataset.json  main.py  pyproject.toml  test.ipynb
.circleci/: config.yml
assets/example_gpt4o/: all_metrics.json  base_sampled_data.jsonl  evaluator_accuracy_metrics.json  experiment_config.json  topics_for_visualization.json  visualization_metrics.json
configs/: README.md  config.yaml
configs/experiment/: gemini_25_pro.yaml  gemini_flash_001.yaml  gpt_4o.yaml  gpt_4o_100_degree.yaml  gpt_4o_10_turns.yaml  gpt_4o_2_degree.yaml  gpt_4o_3_degree.yaml  gpt_4o_jb.yaml  gpt_4o_journalist.yaml  gpt_4o_mini.yaml  gpt_4o_mini_certain_syc.yaml  gpt_4o_mini_doubtful_syc.yaml  gpt_4o_mini_no_persuade_high_belief.yaml  gpt_4o_mini_no_persuade_low_belief.yaml  gpt_4o_mini_no_persuade_mid_belief.yaml  gpt_4o_mini_strong_oppose.yaml  gpt_4o_online_debater.yaml  gpt_4o_peer_support.yaml  gpt_4o_politics.yaml  llama_8b.yaml  llama_8b_100_degree.yaml  llama_8b_10_turns.yaml  llama_8b_2_degree.yaml  llama_8b_3_degree.yaml  llama_8b_journalist.yaml  llama_8b_online_debater.yaml  llama_8b_politics.yaml  qwen3_32b.yaml  (+4 more)
exps/: contexts_comparison.sh  persona_comparison.sh  run_10_turn_convo.sh  run_all_full_eval.sh  topic_rephrase_consistancy.sh
human-annotation/: README.md  create_dataset.py  layout.xml
new_results/: QwenHAttempt.json  QwenHNoAttempt.json  QwenSAttempt.json  QwenSNoAttempt.json  qwenBaseNoAttempt.json
src/: test_visualization_recreation.py
tests/: test_main.py
(+52 files in other folders)
